packages/compiler/test/data/syntax-error/index.js

const variable = true;
const variable = false;
